# quack

./: Cargo.toml  README.md  flake.nix  justfile
src/: lib.rs  progress.rs
src/io/: daq.rs  hdf5.rs  hdf5_types.rs  mod.rs
